--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^4.0.0",
-    "cookie-parser": "~1.4.4",
+    "bcrypt": "^4.0.1",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
